<resources>
    <string name="app_name">WellSafe</string>
    <string name="action_settings">Settings</string>


    <string name="password_hint">Password</string>
    <string name="phone_hint">Phone Number</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Full Name</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you fill in all of the fields!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now login</string>
    <string name="login_button_label">Login</string>
    <string name="login_error_message">Please make sure you enter an email address and password</string>
    <string name="login_error_title">Error!</string>
    <string name="login_text">Already have an account? Click here to login</string>
    <string name="signup_text">Don\'t have an account? Click Here to Sign Up</string>
    <string name="title_activity_login">Sign In</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_main2">WellSafe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_stats">Statistics</string>
    <string name="menu_checkin">Check-In</string>
    <string name="menu_profile">Profile</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_stats">Statistics</string>
    <string name="title_scan">Check-In</string>
    <string name="title_profile">Profile</string>

    <!--Fonts-->
    <string name="product_sans_regular">font/product_sans_regular.ttf</string>
    <string name="product_sans_bold">font/product_sans_bold.ttf</string>
    <string name="product_sans_italic">font/product_sans_italic.ttf</string>
    <string name="product_sans_bold_italic">font/product_sans_bold_italic.ttf</string>

    <!--Proximity Alert-->
    <string name="level0">Checking...</string>
    <string name="level1">Good</string>
    <string name="level2">Moderate</string>
    <string name="level3">Unhealthy</string>
    <string name="level4">Social Distancing Needed</string>

</resources>