<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:layout_alignParentTop="true"
            android:src="@drawable/wellsafe"
            />

        <EditText
            android:id="@+id/fullNameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_hint"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:background="@drawable/edit"
            android:padding="15dp"

            >
            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/fullNameField"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:drawablePadding="10dp"
            android:background="@drawable/edit"
            android:padding="15dp"

            >
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/emailField"
            android:layout_below="@id/emailField"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="10dp"
            android:background="@drawable/edit"
            android:padding="15dp"
            >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="2dp"
            android:background="@drawable/edit"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/countryCode"
                android:layout_width="110dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:padding="6dp"
                android:gravity="center"
                app:ccp_showFlag="false"
                app:ccp_countryPreference="MY"
                app:ccp_defaultNameCode="MY"

                />

            <EditText
                android:id="@+id/phoneNumberField"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/passwordField"
                android:layout_below="@id/passwordField"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:background="#fff"
                android:padding="7dp"
                android:layout_marginRight="10dp"


                >
            </EditText>

        </LinearLayout>



        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/passwordField"
            android:layout_below="@id/passwordField"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/signup_button_label"
            android:textColor="#fff"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/button"
            ></Button>

        <TextView
            android:id="@+id/loginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/loginButton"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/login_text"
            android:textAlignment="center"
            />

    </LinearLayout>

</RelativeLayout>